--- a/Treinando Gitgub/pizza.css
+++ b/Treinando Gitgub/pizza.css
@@ -1,10 +1,9 @@
 body {
   background-color: rgb(255, 51, 51);
-  ;
 }
 header {
   background-color: white;
-  font-style: ;
+  font-style: 20px;
 }
 #titulo {
   margin-left: 750px;
