--- a/Treinando Gitgub/pizza.css
+++ b/Treinando Gitgub/pizza.css
@@ -14,6 +14,12 @@ header {
   height: 200px;
 }
 
-table{
-    border: 1px solid black
+#combos{ 
+  border: 1px solid;
+
+}
+
+table, th, td{
+    border: 1px solid rgb(0, 0, 0);
+    border-collapse: collapse;
 }
